# Sliding-controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: controller.hpp  follower.hpp
launch/: two_robot.launch.py
resources/: trajectory.json
src/: controller.cpp  follower.cpp  rider1.cpp
